--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link"
                 aria-current="page"
                 href="index.html"
                 title="Go back to homepage"
@@ -44,7 +44,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html" title="Learn about Thaisha"
+              <a
+                class="nav-link avtive"
+                href="about.html"
+                title="Learn about Thaisha"
                 >About Me</a
               >
             </li>
