--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link avtive"
+                class="nav-link active"
                 href="about.html"
                 title="Learn about Thaisha"
                 >About Me</a
